fix the slider so that it doesn't have that one second load flicker that it was doing

--- a/www/scss/main.scss
+++ b/www/scss/main.scss
@@ -119,6 +119,7 @@ nav {
 	position: relative;
 	overflow: auto;
 	text-align: center;
+	max-height: 250px;
 	@include banner;
 }
 
